<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/main_padding"
        tools:context=".view.MainActivity">

    <EditText
            android:id="@+id/mainCityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/mainButton"
            android:inputType="textAutoComplete"
            android:hint="@string/hint_city_name"
    />

    <Button
            android:id="@+id/mainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/main_show"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainButton"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/main_info_margin">

        <TextView
                android:id="@+id/mainCityNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_city"
                android:textSize="@dimen/main_text_ts"
        />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimary"
        />


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/mainCityCurrentTempTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_current_temp"
                    android:textSize="@dimen/main_numbs_ts"
            />

            <TextView
                    android:id="@+id/mainCityDescTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/main_info_margin_start"
                    android:text="@string/hint_desc"
                    android:textSize="@dimen/main_text_ts"
            />

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_up_arrow"
            />

            <TextView
                    android:id="@+id/mainCityMaxTempTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/main_info_margin_start"
                    android:text="@string/hint_max_temp"
                    android:textSize="@dimen/main_numbs_ts"
            />

            <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:scaleY="-1"
                    android:src="@drawable/ic_up_arrow"
            />

            <TextView
                    android:id="@+id/mainCityMinTempTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/main_info_margin_start"
                    android:text="@string/hint_min_temp"
                    android:textSize="@dimen/main_numbs_ts"
            />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>